# Plugins

./: CMakeLists.txt  GUI.escript  Plugin.escript  PointDebugRenderer.escript  StagedSurfelShader.escript  SurfelDebugRenderer.escript  SurfelGenerator.escript  SurfelGeneratorOld.escript  SurfelRenderer.escript  SurfelRenderer2.escript  SurfelRenderer3.escript  Utils.escript  main.escript
Animation/: Animation.escript  PlaybackContext.escript  Plugin.escript  Utils.escript
AutoMeshCreation/: Extruder.escript  Plugin.escript  Primitives.escript  SimpleBlobCreator.escript  TreeGen.escript
BlueSurfels/: Plugin.escript  SurfelGenerator.escript  Utils.escript
Compute/: Compactor.escript  Mipmapper.escript  PoissonSampler.escript  Reducer.escript  Scanner.escript  Sorter.escript
Config/: SurfaceScannerConfig.escript  SurfelSamplerConfig.escript  SurfelStrategyConfig.escript  TestScenes.escript
Effects/: DepthComplexity.escript  DynamicSky.escript  FilteredSurfels.escript  InfiniteGround.escript  LimitFPS.escript  Logo.escript  OSD.escript  PPEffect.escript  Plugin.escript  PostProcessingEffects.escript  SimplePPEffect.escript  SimplePPEffect2.escript  Stereo.escript
Evaluator/: Evaluator.escript  EvaluatorManager.escript  Evaluators.escript  Plugin.escript  extendEvaluator.escript  registerEvaluators.escript
ExamplePlugin/: Plugin.escript
GUI/: SamplerRegistry.escript  SurfaceScannerConfig.escript  SurfelGUI.escript  SurfelRendererGUI.escript  SurfelSamplerConfig.escript  SurfelWindow.escript  TestScenes.escript
GUITools/: Logo.escript  MessageWindow.escript  (+2 more)
(+823 files in other folders)
